--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,12 @@
 	<groupId>org.netology</groupId>
 	<artifactId>plaindoll</artifactId>
 	<packaging>jar</packaging>
-	<version>0.0.2</version>
+	<version>1.0${teamcity.build.branch}</version>
 
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<project.vcs.branch/>
 	</properties>
 	<distributionManagement>
 		<repository>
