--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>org.netology</groupId>
 	<artifactId>plaindoll</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0${teamcity.build.branch}</version>
+	<version>1.0${system.prj.ver}</version>
 
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
