--- a/pom.xml
+++ b/pom.xml
@@ -6,17 +6,17 @@
 	<groupId>org.netology</groupId>
 	<artifactId>plaindoll</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0${system.prj.ver}</version>
+	<version>1.0${component.branch}</version>
 
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<project.vcs.branch/>
+		<component.branch/>
 	</properties>
 	<distributionManagement>
 		<repository>
 				<id>nexus</id>
-				<url>http://158.160.61.39:8081/repository/maven-releases</url>
+				<url>http://84.252.130.200:8081/repository/maven-releases</url>
 		</repository>
 	</distributionManagement>
 	<dependencies>
